# running-linux

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .linkspector.yml  .mailmap  .markdown_link_check_config.json  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .pymarkdown.json  .remarkrc.cjs  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  quartz.config.ts  quartz.layout.ts
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: build_and_publish.yml  deploy.yml  governance.yml  sanity_checks_for_prs.yml
.obsidian/: app.json  community-plugins.json
.scripts/: check_excalidraw_settings.py  check_mailmap.py  check_no_horizontal_rules.py  check_python_version.py
content/: index.md
content/adrs/: 20260313-tailscale-headscale.md  20260408-ipu6-webcam-support.md  20260410-openclaw.md  20260416-prevent-bluetooth-headset-from-switching-codes.md  20260429-webcam-loop-playback.md  20261003-thermal-and-power.md  20261312-hibernation-on-luks.md
content/done/: 20260312-hibernation-on-luks.md  20260408-ipu6-webcam-support.md  20260415-memory-fragmentation-mitigation.md  20260520-jellyfin-unified-media-structure.md  20260520-ssh-multi-account-github.md  20260521-git-multi-identity.md  20260603-opencode-guarded-sudo.md
content/plans/: 20260520-pkb-tech-stack.md
docs/: index.md
docs/done/: 20260312-hibernation-on-luks.md  20260408-ipu6-webcam-support.md  20260416-prevent-bluetooth-headset-from-switching-codes.md  20260429-webcam-loop-playback.md  20260520-pkb-tech-stack.md  20260520-ssh-multi-account-github.md  (+4 more)
(+10 files in other folders)
